--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
+  material_design_icons_flutter: 7.0.7296
 
 
   # The following adds the Cupertino Icons font to your application.
