--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/tiny-detector-white.jpeg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
