--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   material_design_icons_flutter: 7.0.7296
+  shared_preferences: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
