--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/tiny-detector-colored.jpeg
     - assets/tiny-detector-white.png
     - assets/image1.png
     - assets/image2.png
