--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   postgres: ^2.4.1
   shelf: ^1.4.1
   google_sign_in_web: ^0.12.4+1
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
