--- a/flutter_tiny_detector/pubspec.yaml
+++ b/flutter_tiny_detector/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shelf: ^1.4.1
   google_sign_in_web: ^0.12.4+1
   flutter_secure_storage: ^9.2.2
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
