--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,21 +5,21 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "flutter_tiny_detector",
-            "cwd": "flutter_tiny_detector",
+            "name": "front-end",
+            "cwd": "front-end",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "flutter_tiny_detector (profile mode)",
-            "cwd": "flutter_tiny_detector",
+            "name": "front-end (profile mode)",
+            "cwd": "front-end",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "flutter_tiny_detector (release mode)",
-            "cwd": "flutter_tiny_detector",
+            "name": "front-end (release mode)",
+            "cwd": "front-end",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
