--- a/front-end/pubspec.yaml
+++ b/front-end/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/tiny-detector-colored.jpeg
+    - assets/tiny-detector-colored.png
     - assets/tiny-detector-white.png
     - assets/faq.png
     - assets/image1.png
@@ -112,7 +112,6 @@ flutter:
         - asset: fonts/Rubik-Regular.ttf
         - asset: fonts/Rubik-Italic.ttf
           style: italic
-        - asset: fonts/TrajanPro.ttf
         - asset: fonts/Rubik-Bold.ttf
           weight: 700
   #
