--- a/front-end/pubspec.yaml
+++ b/front-end/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in_web: ^0.12.4+1
   flutter_secure_storage: ^9.2.2
   jwt_decoder: ^2.0.1
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
