--- a/front-end/pubspec.yaml
+++ b/front-end/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   jwt_decoder: ^2.0.1
   fl_chart: ^0.68.0
+  logger: ^2.3.0
 
 dev_dependencies:
   flutter_test:
